--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   * {
     box-sizing: border-box;
   }
+  
+  html, body {
+    height: 100%;
+  }
 
   body {
     background: #fff;
@@ -35,7 +39,7 @@
 
   .graph, .tree {
     float: left;
-    height: 500px;
+    height: 40%;
   }
 
   .forward, .back {
@@ -46,12 +50,18 @@
     display: none;
   }
 
+  .control {
+    display: absolute;
+    top: 10px;
+    left: 10px;
+  }
+
   .content {
     width: 100%;
+    height: 60%;
     padding: 20px;
     float: left;
     border-top: 1px solid #666;
-    margin-bottom: 100px;
   }
 
   .content-editor {
@@ -62,12 +72,13 @@
 
   .content-body {
     width: 50%;
+    height: 100%;
+    overflow: auto;
     float: left;
   }
 
   #content_editor {
     display: block;
-    position: absolute;
     height: 100%;
     width: 100%;
     padding: 20px;
@@ -192,14 +203,15 @@
 
 
 
-# kernelmethods
+# [Kernel Methods](#kernelmethods)
 
 ## Definition
 
 A method is kernelized if every feature vector ψ(x) only appears inside an inner product with another feature vector ψ(x′). In particular, this applies to both the optimization problem and the prediction function.
 
 
-# kernelfunction
+
+# [Kernel Functions](kernelfunctions)
 
 ### The Kernel Function
 
@@ -224,13 +236,13 @@ What are the Benefits of Kernelization?
 - 3. Allows thinking in terms of “similarity” rather than features.
 
 
-# simiscore
+# [Similarity Scores](#simiscore)
 
 It is often useful to think of the kernel function as a similarity score. But this is not a mathematically precise statement.
 
-# overfitting
+# [Overfitting](#overfitting)
 
-jibberish
+
 </textarea>
       </div>
     </div>
@@ -244,6 +256,7 @@ jibberish
     <script src="./src/dag.js"></script>
     <script src="./src/tree.js"></script>
     <script src="./src/tex.js"></script>
+    <script src="./src/anchor.js"></script>
     <script src="./src/index.js"></script>
     <script src="./src/main.js"></script>
   </body>
