--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
   </head>
 
   <body>
+    <a href="https://github.com/josherich/dependent-writing"><img style="position: absolute; top: 0; right: 0; border: 0;z-index: 10;cursor: pointer;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     <div class="graph">
       <div class="control-zoom">
           <a class="control-zoom-in" href="#" title="Zoom in"></a>
@@ -192,6 +193,46 @@
       <div class="content-editor">
         <button id="rerender">render</button>
         <textarea name="" id="content_editor" cols="30" rows="10">
+# Machine Learning
+
+## Examples of Learning Tasks
+
+- Text
+
+- Language
+
+- Speech
+
+- Image
+
+- Games
+
+- Unassisted control of vehicles
+
+- Medical diagnosis, fraud detection, network intrusion
+
+## some broad tasks
+
+- classification
+
+- regression
+
+- Ranking
+
+- Clustering
+
+- Dimensionality reduction
+
+## General Objective
+
+## Topics
+
+- Probability tools, concentration inequalities
+
+- PAC learning model, Rademacher complexity, VC-dimension
+
+- [SVMs](#SVM), margin bounds, [kernel methods](#kernelmethods)
+
 # [feature spaces](#featurespaces)
 ### Very large feature spaces have two potential issues:
 - 1. [Overfitting](#overfitting)
