--- a/index.html
+++ b/index.html
@@ -9,8 +9,32 @@
     <link rel="stylesheet" href="./src/github-markdown.css">
   </head>
 
-  <body>
-    <a href="https://github.com/josherich/dependent-writing"><img style="position: absolute; top: 0; right: 0; border: 0;z-index: 10;cursor: pointer;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
+  <body class="">
+    <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <defs>
+    <symbol id="icon-tree" viewBox="0 0 32 32">
+    <title>tree</title>
+    <path d="M30.5 24h-0.5v-6.5c0-1.93-1.57-3.5-3.5-3.5h-8.5v-4h0.5c0.825 0 1.5-0.675 1.5-1.5v-5c0-0.825-0.675-1.5-1.5-1.5h-5c-0.825 0-1.5 0.675-1.5 1.5v5c0 0.825 0.675 1.5 1.5 1.5h0.5v4h-8.5c-1.93 0-3.5 1.57-3.5 3.5v6.5h-0.5c-0.825 0-1.5 0.675-1.5 1.5v5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-5c0-0.825-0.675-1.5-1.5-1.5h-0.5v-6h8v6h-0.5c-0.825 0-1.5 0.675-1.5 1.5v5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-5c0-0.825-0.675-1.5-1.5-1.5h-0.5v-6h8v6h-0.5c-0.825 0-1.5 0.675-1.5 1.5v5c0 0.825 0.675 1.5 1.5 1.5h5c0.825 0 1.5-0.675 1.5-1.5v-5c0-0.825-0.675-1.5-1.5-1.5zM6 30h-4v-4h4v4zM18 30h-4v-4h4v4zM14 8v-4h4v4h-4zM30 30h-4v-4h4v4z"></path>
+    </symbol>
+    <symbol id="icon-arrow-right" viewBox="0 0 32 32">
+    <title>arrow-right</title>
+    <path d="M31 16l-15-15v9h-16v12h16v9z"></path>
+    </symbol>
+    <symbol id="icon-arrow-left" viewBox="0 0 32 32">
+    <title>arrow-left</title>
+    <path d="M1 16l15 15v-9h16v-12h-16v-9z"></path>
+    </symbol>
+    <symbol id="icon-make-group" viewBox="0 0 32 32">
+    <title>make-group</title>
+    <path d="M10 4h-4c-1.1 0-2 0.9-2 2v4c0 1.1 0.9 2 2 2h4c1.1 0 2-0.9 2-2v-4c0-1.1-0.9-2-2-2z"></path>
+    <path d="M22 12h4c1.1 0 2-0.9 2-2v-4c0-1.1-0.9-2-2-2h-4c-1.1 0-2 0.9-2 2v4c0 1.1 0.9 2 2 2zM22 6h4v4h-4v-4z"></path>
+    <path d="M10 20h-4c-1.1 0-2 0.9-2 2v4c0 1.1 0.9 2 2 2h4c1.1 0 2-0.9 2-2v-4c0-1.1-0.9-2-2-2zM10 26h-4v-4h4v4z"></path>
+    <path d="M26 20h-4c-1.1 0-2 0.9-2 2v4c0 1.1 0.9 2 2 2h4c1.1 0 2-0.9 2-2v-4c0-1.1-0.9-2-2-2z"></path>
+    <path d="M28 16h-2c-2.671 0-5.182-1.040-7.071-2.929s-2.929-4.4-2.929-7.071v-2c0-2.2-1.8-4-4-4h-8c-2.2 0-4 1.8-4 4v8c0 2.2 1.8 4 4 4h2c2.671 0 5.182 1.040 7.071 2.929s2.929 4.4 2.929 7.071v2c0 2.2 1.8 4 4 4h8c2.2 0 4-1.8 4-4v-8c0-2.2-1.8-4-4-4zM30 28c0 0.53-0.209 1.031-0.589 1.411s-0.881 0.589-1.411 0.589h-8c-0.53 0-1.031-0.209-1.411-0.589s-0.589-0.881-0.589-1.411v-2c0-6.627-5.373-12-12-12h-2c-0.53 0-1.031-0.209-1.411-0.589s-0.589-0.881-0.589-1.411v-8c0-0.53 0.209-1.031 0.589-1.411s0.881-0.589 1.411-0.589h8c0.53 0 1.031 0.209 1.411 0.589s0.589 0.881 0.589 1.411v2c0 6.627 5.373 12 12 12h2c0.53 0 1.031 0.209 1.411 0.589s0.589 0.881 0.589 1.411v8z"></path>
+    </symbol>
+    </defs>
+    </svg>
+    <a href="https://github.com/josherich/dependent-writing"><img style="position: absolute; top: 0; left: 0; border: 0;z-index: 10;cursor: pointer;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
     <div id="widget_container">
       <div class="graph" id="graph">
         <div class="control-zoom">
@@ -26,24 +50,41 @@
         <textarea name="" id="content_editor" cols="30" rows="10">
 
         </textarea>
-        </div>
       </div>
+    </div>
 
     <div id="marker_stash">
       
     </div>
 
     <div id="control_panel">
-      <span id="toggle_graph">Graph</span>
-      <span id="toggle_tree">Tree</span>
-      <span id="toggle_edit">Edit</span>
+      <div id="content_back">
+        <div class="control-icon">
+            <div class="clearfix pbs">
+                <svg class="icon icon-arrow-left"><use xlink:href="#icon-arrow-left"></use></svg>
+            </div>
+        </div>
+      </div>
+      <div id="content_forward">
+        <div class="control-icon">
+            <div class="clearfix pbs">
+                <svg class="icon icon-arrow-right"><use xlink:href="#icon-arrow-right"></use></svg>
+            </div>
+        </div>
+      </div>
+      <div id="toggle_graph">
+        <div class="control-icon">
+            <div class="clearfix pbs">
+                <svg class="icon icon-make-group"><use xlink:href="#icon-make-group"></use></svg>
+            </div>
+        </div>
+      </div>
+      
+      <!-- <span id="toggle_edit">Edit</span> -->
     </div>
 
+
     <div class="content">
-      <div class="content-control">
-        <span class="back">Back</span>&nbsp;
-        <span class="forward">Forward</span>
-      </div>
       <div class="content-body markdown-body"></div>
     </div>
 
