--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         document.querySelector('#signin').style.display = 'none'
       }
       function setUISignout() {
-        document.querySelector('#firebaseui-auth-container').style.display = 'block'
+        document.querySelector('#firebaseui-auth-container').style.display = 'none'
         document.querySelector('#save').style.display = 'none'
         document.querySelector('#signin').style.display = 'block'
       }
