--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <script src="./dist/app.js"></script>
     
     <script>
-      sd.demo(['/docs/math.md'], "github", storageRef);
+      sd.demo(['/static-notebook/docs/math.md'], "github", storageRef);
     </script>
   </body>
 </html>
