chg: hide firebase login

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
       <div id="auth_close"><button>x</button></div>
     </div>
 
-    <div id="signin">Sign in</div>
+    <div id="signin" style="display: none">Sign in</div>
 
     <div class="content">
       <div class="tree-notes"></div>
